Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-693

Thrift compiler generated java code that throws compiler warnings about deprecated methods.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.2
    • 0.5
    • None

    Description

      Installed release thrift-0.2.0. The compiler generates java code with the methods setFieldValue, getFieldValue and isSet. However, in the TBase interface, these methods are marked as deprecated. This throws java compiler warnings when compiling the thrift generated library code.

      Attachments

        1. thrift-693.patch
          7 kB
          Bryan Duxbury

        Activity

          People

            bryanduxbury Bryan Duxbury
            adragomir Andrei Dragomir
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: