THRIFT-693. java: Thrift compiler generated java code that throws compiler warnings about deprecated methods.

This patch removes the deprecated methods from TBase and makes some generator changes to accommodate.

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@987805 13f79535-47bb-0310-9956-ffa450edef68