lib/java/test/org/apache/thrift/test/JavaBeansTest.java
@@ -54,7 +54,7 @@ public class JavaBeansTest {
       throw new RuntimeException("isSet method error: unset field returned as set!");
 
     for (int i = 1; i < 12; i++){
-      if (ooe.isSet(i))
+      if (ooe.isSet(ooe.fieldForId(i)))
         throw new RuntimeException("isSet method error: unset field " + i + " returned as set!");
     }
 
@@ -95,14 +95,14 @@ public class JavaBeansTest {
       throw new RuntimeException("isSet method error: set field returned as unset!");
 
     for (int i = 1; i < 12; i++){
-      if (!ooe.isSet(i))
+      if (!ooe.isSet(ooe.fieldForId(i)))
         throw new RuntimeException("isSet method error: set field " + i + " returned as unset!");
     }
 
     // Should throw exception when field doesn't exist
     boolean exceptionThrown = false;
     try{
-      if (ooe.isSet(100));
+      if (ooe.isSet(ooe.fieldForId(100)));
     } catch (IllegalArgumentException e){
       exceptionThrown = true;
     }
